@@ -29,8 +29,9 @@
     * Added states structure to api/connection endpoint
     * Added Connect configuration info to api/connection endpoint
     * Added connection.py with api/connection GET, POST endpoints
-    * Added api/setting GET endpoint
+    * Added api/settings GET endpoint
     * Added m_timestamp to SDCard files properties
+    * Added api/settings POST endpoint, fix settings.py name
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
